--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,18 @@ a{
 .search-place,
 .hebergements-and-populaires,
 .activities{
-    margin-left: 50px;
-    margin-right: 50px;
     margin-bottom: 35px;
 }
 
 .main-container{
     width: 100%;
     max-width: 1440px;
-    padding: 0 50px;
     box-sizing: border-box;
+}
+
+main,
+footer{
+    margin: 0 50px;
 }
 
 .section-title{
@@ -76,7 +78,7 @@ a{
     font-weight: 700;
 }
 
-.neutralStar{
+.neutral-star{
     color: var(--main-bg-color)
 }
 /* #endregion COMPONMENT */
@@ -86,6 +88,7 @@ header{
     display: flex;
     justify-content: space-between;
     height: 80px;
+    padding: 0;
     margin-bottom: 40px;
 }
 
@@ -100,6 +103,9 @@ header img{
 
 nav{
     display: flex;
+    justify-content: center;
+    width: 329px;
+    height: 35px;
     gap: 68px;
     margin-bottom: 44px;
 }
@@ -131,18 +137,24 @@ body{
         justify-content: center;
         gap: 35px;
     }
+    
+    .recherche{
+        display: flex;
+        flex-direction: row;
+    }
 
     .barre-de-recherche{
-        display: grid;
-        grid-template-columns: 50px 195px 132px;
+        display: flex;
+        flex-direction: row;
         font-weight: bold;
         font-size: 18px;
+        border: 1px solid #f2f2f2;
+        border-radius: 20px;
     }
 
     label{
         background-color: #F2F2F2;
         border-radius: 15px 0px 0px 15px;
-        border: 1px solid #F2F2F2;
         padding: 15px 18px;
     }
 
@@ -155,16 +167,12 @@ body{
         color: white;
     }
 
-    .fa-info{
-        width: 4px;
-        height: 10px;
-    }
-
     input{
-        border: 1px solid #F2F2F2;
+        border: none;
         padding: 14px 24px;
         font-weight: 700;
         font-size: 18px;
+        outline: none;
     }
 
 
@@ -176,6 +184,7 @@ body{
         border: 1px solid #0065FC;
         font-weight: 700;
         font-size: 18px;
+        cursor: pointer;
     }
 
     .icone{
@@ -237,6 +246,11 @@ body{
         border-radius: 50%;
     }
 
+    .fa-info{
+        width: 4px;
+        height: 10px;
+    }
+
     /* #endregion RESEARCH */
 
     /* #region HOSTS & FAME PLACES */
@@ -258,7 +272,7 @@ body{
         .hebergements{
             display: flex;
             flex-direction: column;
-            /*width: 65%;*/
+            /*-width: 65%;*/
             flex-grow: 1;
             gap: 30px;
         }
@@ -278,7 +292,7 @@ body{
         }
 
         .find img{
-            border-radius: 20px 20px 0px 0px;
+            border-radius: 15px 15px 0px 0px;
             object-fit: cover;
             width: 100%;
             height: 114px;
@@ -286,7 +300,7 @@ body{
 
         .find-rating,
         .card-rating{
-            border: solid fuchsia;
+            letter-spacing: -1.5px;
         }
 
         /* #endregion HOSTS */
@@ -294,7 +308,7 @@ body{
         /* #region FAME PLACES */
 
         .populaires{
-            width: 32%;
+            width: 429px;
         }
         
         .populaires-title{
@@ -319,8 +333,8 @@ body{
         .populaires-cards img{
             width: 33%;
             height: 134px;
-            border-top-left-radius: 20px;
-            border-bottom-left-radius: 20px;
+            border-top-left-radius: 15px;
+            border-bottom-left-radius: 15px;
         }
         
         .populaires-cards .card-content{
@@ -369,6 +383,7 @@ body{
     
     .place-to-be{
         display: flex;
+        overflow: hidden;
         flex-direction: column;
         background-color: white;
         border-radius: 20px;
@@ -379,8 +394,6 @@ body{
         object-fit: cover;
         width: 100%;
         height: 380px;
-        border-top-right-radius: 20px;
-        border-top-left-radius: 20px;
     }
     
     .place-to-be-title{
@@ -401,9 +414,6 @@ body{
 footer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    height: 163px;
-    margin-left: 50px;
-    margin-right: 50px;
     background-color: #F2F2F2;
 }
 
@@ -426,34 +436,46 @@ footer{
 
 
 /* #region MEDIA QUERIES */
-    /* #region Medium devices (tablets, less/equal than 1024px) */
-    @media (max-width: 1024px){
-        .search-place,
-        .hebergements-and-populaires,
-        .activities,
-        footer{
-            margin-left: 50px;
-            margin-right: 50px;
+    /* #region Between Desktop & Tablet (max 1336px min 1025px) */
+    @media screen and (min-width: 1025px) and (max-width: 1336px){
+        
+        .hebergements-find{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 30px;
         }
 
+                .activities-offer{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-columns: 297px;
+            gap: 30px;
+        }
+    }
+
+    /* #endregion Between Destop & Tablet (max 1336px min 1025px */
+
+    /* #region Medium devices (tablets, less/equal than 1024px) */
+    @media screen and (max-width: 1024px){
+        /* #region HEADER */
         header{
             margin-bottom: 30px;
         }
 
         header img{
-            margin-left: 50px;
+            margin: 30px 50px;
         }
+        /* #endregion HEADER */
 
-        header nav{
-            margin-right: 50px;
-        }
-
+        /* #region RESEARCH */
         .filtres{
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
         }
+        /* #endregion RESEARCH */
 
+        /* #region HOSTS & FAME PLACES */
         .hebergements-and-populaires{
             display: flex;
             flex-direction: column;
@@ -477,11 +499,9 @@ footer{
             gap: 20px;
             margin-top: 20px;
         }
+        /* #endregion HOSTS & FAME PLACES */
 
-        .place-to-be{
-            border: solid green; /*problème de taille*/
-        }
-
+        /* #region ACTIVITIES */
         .place-to-be img{
             object-fit: cover;
             width: 100%;
@@ -491,28 +511,62 @@ footer{
         .place-to-be-title{
             height: 70px;
         }
+        /* #endregion ACTIVITIES */
     }
     /* #endregion Medium devices (tablets, less/equal than 1024px) */
 
-    /* #region Small devices (phones, less than 768px) */
-    @media (max-width: 767.98px){
-
-        .main-container,
-        footer{ /* si je ne le mets pas le css ne s'applique pas */
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            gap: 35px;
-            margin: 0;
-            padding: 0;
+    /* #region Between Tablet & Mobile (max 869px min 768px) */
+    @media screen and (min-width: 768px) and (max-width: 869px){
+        
+        .hebergements-find{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 30px;
         }
 
+        .activities-offer{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-columns: 297px;
+            gap: 30px;
+        }
+    }
+
+    /* #endregion Between Tablet & Mobile (max 869px min 768px */
+
+    /* #region Small devices (phones, less than 768px) */
+    @media screen and (max-width: 767.98px){
+        main,
+        footer{
+            display: flex;
+            flex-direction: column;
+            gap: 35px;
+            margin: 0;
+        }
+
+        .search-place,
+        .hebergements-and-populaires,
+        .activities{
+            margin: 0;
+        }
+
+        .populaires-cards,
+        .hebergements-find,
+        .activities-offer{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            width: 100%;
+        }
+
+        /* #region HEADER */
         header{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             margin: 0;
+            margin-bottom: 30px;
             height: 115px;
         }
 
@@ -545,19 +599,9 @@ footer{
             border-top: none;
             border-bottom: var(--border-top) solid #0065FC;
         }
-
-        main{
-            display: flex;
-            flex-direction: column;
-            gap: 35px;
-        }
-
-        .search-place,
-        .hebergements-and-populaires,
-        .activities{
-            margin: 0;
-        }
-
+        /* #endregion HEADER */
+        
+        /* #region RESEARCH */
         .search-place div{
             display: flex;
             flex-wrap: wrap;
@@ -565,9 +609,7 @@ footer{
             padding-right: 20px;
         }
 
-        .barre-de-recherche{
-            display: grid;
-            grid-template-columns: 50px 236px 49px;
+        .recherche{
             justify-content: center;
         }
 
@@ -607,9 +649,11 @@ footer{
         .places-number{
             display: flex;
             flex-direction: row;
-            border: solid orange; /*impossible de les aligner sur la même ligne lorsque l'on arrive à 516px*/
+            flex-wrap: nowrap !important;
         }
+        /* #endregion RESEARCH */
 
+        /* #region HOSTS & FAME PLACES */
         .hebergements-and-populaires{
             display: flex;
             flex-direction: column-reverse;
@@ -658,29 +702,22 @@ footer{
         .hebergements-find .image-6{
             order: 5;
         }
-
-        .populaires-cards,
-        .hebergements-find,
-        .activities-offer{
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            width: 100%;
-        }
-
+        /* #endregion HOSTS & FAME PLACES */
+        
+        /* #region ACTIVITIES */
         .place-to-be{
-            height: 200px;
+            aspect-ratio: 1.5;
         }
 
         .place-to-be img{ 
             height: 70%;
             object-fit: cover;
         }
+        /* #endregion ACTIVITIES */
 
+        /* #region FOOTER */
         footer{
-            display: flex;
-            flex-direction: column;
-            height: 100%;
+            flex-wrap: wrap;
             gap: 50px;
             padding: 30px;
         }
@@ -688,7 +725,18 @@ footer{
         .pied-de-page{
             padding: 0;
         }
+        /* #endregion FOOTER */
     }
     /* #endregion Small devices (phones, less than 768px) */
 
 /* #endregion MEDIA QUERIES */
+
+.find,
+.card{
+    transition: transform 0.3s ease-in-out;
+}
+
+.find:hover,
+.card:hover{
+    transform: scale(105%);
+}
